--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.11"
   },
